Fix image width on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,6 @@
 #nav {
 	width: 100%;
-    text-align: center;
+  text-align: center;
 }
 
 header > .content > .title, .subtitle {
@@ -30,4 +30,8 @@ header > .content > .title, .subtitle {
 .logos a {
     display: block;
     padding: 30px;
+}
+
+article img {
+	max-width: 100%;
 }
